--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=openfeature-demo
+# demo.featureProvider=featureProviderFlagd
+demo.featureProvider=flagd
+#demo.featureProvider=flipt
